argocd/apps/satellites/blog/network-policies/templates/allow-app-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-postgres
  namespace: blog
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: app
      ports:
        - protocol: TCP
          port: 5432
