argocd/apps/satellites/blog/network-policies/templates/allow-cloudflared-to-laravel.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared-to-laravel
  namespace: blog
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/component: laravel
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudflared
      ports:
        - protocol: TCP
          port: 8000
