argocd/apps/satellites/blog/network-policies/templates/cilium-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: blog-baseline
  namespace: blog
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-egress
  namespace: blog
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: app
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared-egress
  namespace: blog
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: app
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            app.kubernetes.io/name: argocd-server
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: keycloak
            app.kubernetes.io/name: keycloak
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: TCP
            - port: "7844"
              protocol: UDP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-egress
  namespace: blog
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  egress:
    - toEntities:
        - kube-apiserver
