argocd/apps/satellites/blog/network-policies/templates/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: blog
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
